# Electronics_Platform

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
electronic_platform/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
electronic_platform/migrations/: 0001_initial.py  0002_rename_supplier_type_supplier_provider_type_and_more.py  0003_rename_supplier_product_provider.py
fixtures/: electronic_platform.json
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
